--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,10 @@ venv/
 # Ignore local files
 ignore_*
 .vscode
+
+# Ignore python generated companion configs
 python_updated.companionconfig
+python_nav_updated.companionconfig
 
 # Ignore archive folder
 archive
